# THEMol

./: .gitignore  LICENSE  Makefile  README.md  THEMol.md  calculate_ccsd_t_cbs_sample.py  calculate_ccsd_t_cbs_sample.sbatch  calculate_gxtb_readme_samples.sbatch  calculate_gxtb_sample.sbatch  calculate_orca_sample.py  calculate_orca_sample.sbatch  calculate_pyscf_sample.py  calculate_pyscf_sample.sbatch  calculate_uma_sample.py  calculate_uma_sample.sbatch  calculate_xtb_sample.py  calculate_xtb_sample.sbatch  frequency_analysis.py  hessian_h5_summary.json  hessian_h5_summary.md  packages_cluster.md  plot_pyscf_comparisons.py  prepare_hessian_omol_upload.py  pyproject.toml  requirements.txt  set_pythonpath.sh  submit_ccsd_t_cbs_small_samples.sh  submit_gxtb_readme_samples.sh  submit_orca_readme_samples.sh  submit_xtb_readme_samples.sh  themol_huggingface.md
bytemol/core/: __init__.py  cluster.py  conformer.py  molecule.py  moleculegraph.py  topology.py
bytemol/testdata/: .gitignore  107953.xyz  1a.mol2  1a.xyz  1a_GMX.gro  1a_GMX_ref.gro  1a_GMX_revisedBox.gro  21083.sdf  3a_torsion_4_8_12_15.extxyz  3a_torsion_4_8_12_15.sdf  906680.xyz  9mv_neutral.sdf  C10H11N4O8P-2_1.sdf  C12H7Cl3O2_1.sdf  C6H15NO2_no_improper_GMX.sdf  CO2.sdf  Edoxaban.sdf  HSO4.xyz  N2H2.sdf  T000001696.sdf  acetonitrile.sdf  alanine.sdf  c255_Z_pent_2_ene.xyz  c289_E_12_dichloroethene.xyz  c290_Z_12_dichloroethene.xyz  c522_mobley_2727678.1.xyz  (+17 more)
examples/: README.md  read_hessian.py  read_hessian_relax.py  read_mbis.py  read_torsionscan.py  read_torsionscan_relax.py
moleculedataset/: README.md
(+74 files in other folders)
