[project]
name = "themol"
version = "0.1.0"
description = "Utilities for reading and comparing THEMol molecular datasets."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ase==3.25",
    "h5py~=3.10.0",
    "matplotlib~=3.8.3",
    "networkx~=3.2.1",
    "numpy~=1.26.2",
    "pandas",
    "pyscf",
    "rdkit~=2024.9.1",
    "scipy",
    "seaborn",
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "pytest-xdist",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["bytemol*", "moleculedataset*"]

[tool.pytest.ini_options]
log_format = "%(asctime)s %(levelname)s %(message)s"
log_date_format = "%Y-%m-%d %H:%M:%S"
log_cli = true
log_level = "INFO"
filterwarnings = ["always"]
markers = ["serial"]
